--- a/client/src/app.html
+++ b/client/src/app.html
@@ -2,8 +2,26 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
+		<title>Apollo</title>
+		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
+		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+		<link rel="manifest" href="/site.webmanifest" />
+		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+		<meta name="apple-mobile-web-app-title" content="Apollo" />
+		<meta name="application-name" content="Apollo" />
+		<meta name="msapplication-TileColor" content="#da532c" />
+		<meta name="theme-color" content="#121212" />
+
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="Apollo the coolest cloud music player!" />
+		<meta
+			name="keywords"
+			content="apollo,theapollo,the apollo,apollomusic,apollo music,music,musicplayer,music player,player,apollomusicplayer,apollo music player"
+		/>
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
