FIX: add more time to the verification emails 🛠

--- a/server/utils/mailer/password_reset_template.html
+++ b/server/utils/mailer/password_reset_template.html
@@ -22,14 +22,27 @@
             >Apollo Music</a
           >
         </div>
-        <p style="font-size: 1.1em">Hi again!,</p>
+        <p style="font-size: 1.1em">Hi again!</p>
         <p>
           Forgot your password? We received a request to reset your password!
           <br />
           To reset your password, open this link, (keep in mind that you have to
-          reset your password in the next <b>5 minutes</b>):
+          reset your password in the next <b>30 minutes</b>):
           <br />
-          <a href="{{ .ResetLink }}">{{ .ResetLink }}</a>
+          <a style="color: white" href="{{ .ResetLink }}">
+            <h2
+              style="
+                background: #00466a;
+                margin: 0 auto;
+                width: max-content;
+                padding: 0 10px;
+                color: #fff;
+                border-radius: 4px;
+              "
+            >
+              Reset Link
+            </h2>
+          </a>
           <br />
           If you didn't request this reset, send an email at
           <a href="mailto:pub@mbaraa.com">pub@mbaraa.com</a>
