FEAT: new logo ✨

--- a/client/src/app.html
+++ b/client/src/app.html
@@ -9,11 +9,11 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 		<link rel="manifest" href="/site.webmanifest" />
-		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
-		<meta name="apple-mobile-web-app-title" content="Apollo" />
-		<meta name="application-name" content="Apollo" />
-		<meta name="msapplication-TileColor" content="#da532c" />
-		<meta name="theme-color" content="#121212" />
+		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#162331" />
+		<meta name="apple-mobile-web-app-title" content="Apollo Music" />
+		<meta name="application-name" content="Apollo Music" />
+		<meta name="msapplication-TileColor" content="#162331" />
+		<meta name="theme-color" content="#162331" />
 
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="Apollo the coolest cloud music player!" />
