--- a/client/src/app.html
+++ b/client/src/app.html
@@ -9,11 +9,9 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 		<link rel="manifest" href="/site.webmanifest" />
-		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#162331" />
-		<meta name="apple-mobile-web-app-title" content="Apollo Music" />
-		<meta name="application-name" content="Apollo Music" />
-		<meta name="msapplication-TileColor" content="#162331" />
-		<meta name="theme-color" content="#162331" />
+		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#051220" />
+		<meta name="msapplication-TileColor" content="#051220" />
+		<meta name="theme-color" content="#051220" />
 
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="Apollo the coolest cloud music player!" />
@@ -24,7 +22,7 @@
 
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="bg-dark-primary">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
